themes/lost-theme/assets/css/main.css
/* ... */
.shields {
	display: flex;
	flex-wrap: nowrap;
	justify-content: center; /*space-between*/
	gap: 1%;
	width: 100%;
	padding: 4px 8px 0px 4px;
	overflow: hidden;
	pointer-events: none;
}

.shields:hover > * {
	opacity: 0.5;
	filter: blur(1.5px);

	& img {
		min-height: 16px;
	}
}
.shields:hover > *:hover {
	opacity: 1;
	filter: blur(0px);
	z-index: 1;

	& img {
		width: auto;
		max-height: 16px;
	}
}

.shield-wrap {
	flex: 0 1 auto;
	height: 16px;
	transition: ease-out, filter var(--shortest) ease-out, opacity var(--shortest) ease-out;

	& img {
		display: block;
		height: auto;
		width: 100%;
		max-height: 16px;
		pointer-events: auto;
	}
}

 /* Allows hover (along with `pointer-events: auto` bellow) ignore paddings/gaps! */
 /*
.shields {
	display: flex;
	flex-wrap: nowrap;
	justify-content: space-between;
	gap: 4px;
	width: 100%;
	padding: 4px 8px;
	overflow: visible;
	pointer-events: none;

	& img {
		height: auto;
		min-width: 0;
		max-width: 100%;
		max-height: 16px;
		object-fit: contain;
		flex-shrink: 1;
		flex-basis: auto;
		pointer-events: auto;
		transform-origin: center top;
		transition: transform var(--shorter) ease-in-out, z-index var(--shorter)
	}
	&:hover > * {
		opacity: 0.5;
		filter: blur(2px);
	}
	&:hover > *:hover {
		opacity: 1;
		filter: unset;
		transform: scale(1.5);
		z-index: 1;
	}
	& img:first-child {
		transform-origin: left top;
	}
	& img:last-child {
		transform-origin: right top;
	}
}
*/

aside, .aside {
	flex: 0.33 1 var(--aside-w);
	font-size: small;
	overflow-x: hidden;
	background-color: inherit;

	& h2, h3, h4, li {
		list-style-position: inside;
		white-space: nowrap;
		text-overflow: ellipsis;
		overflow: hidden;
	}
}

a {
	color: var(--a);
	text-decoration: none;

	&:link {
		/*color: inherit;*/
	}
	&:visited {
		color: var(--a-visited);
	}
	&:hover {
		color: var(--a-hover);
		text-decoration: underline;
		
		&:has(.fa) {
			text-decoration: none;
		}
	}
	&:active {
		color: var(--accent)
	}
	&[href=""], &:not([href]) { /* Disguise links without a href */
		pointer-events: none;
		cursor: default;
		text-decoration: none;
		color: var(--text);
	}
	& .fa {
		text-decoration: none; /* Un-underline elements with the class `fa` within links */
	}
} /* NOTE: LoVe-HAte (Never forget...) */



blockquote {
	width: 100%;
	margin-top: 4px;
	padding: 0.2em 0.6em;
	container: inline-size;
	border-radius: var(--round);
	border-left: 4px solid var(--accent);
	text-align: justify;
	text-wrap: pretty;
	hyphens: auto;
	hyphenate-limit-chars: 6;
	font-size: 0.875em;
	font-size: clamp(0.75em, 6.5cqw, 1em);
	background-color: color-mix(in srgb, var(--accent) 33%, transparent);
	box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.33);

	& p {
		font-size: 85%;
	}
}

button, .button, a.button {
	display: inline-block;
	padding: 4px 8px;
	color: rgb(from var(--text) r g b / 90%);
	border-radius: var(--round);
	text-align: center;
	text-decoration: none;
	white-space: nowrap;
	font-size: small;
	background: var(--gray-B4);
	user-select: none;
	box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.33);

	&:hover {
		text-decoration: none;
		background-color: var(--gray-A5);
	}
	&:active {
		transform: translateX(1px) translateY(1px);
		border-color: var(--accent);
		box-shadow: 1px 2px 2px 0 inset rgba(0, 0, 0, 0.33);
		background-color: color-mix(in srgb, var(--accent) 50%, var(--gray-A5));
	}
	&.tag {
		cursor: pointer;

		&:before {
			content: "#";
			margin-right: 2px;
			opacity: 50%;
		}
	}
}

dialog {
	max-width: 67%;
	margin: auto;
	padding: 1em 1em 0.67em 1em;
	border: none;
	border-radius: var(--round);
	box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.67);
	background-color: var(--gray-E1);
}

dialog p {
	margin-bottom: 1.5rem;
	white-space: wrap;
	color: var(--gray-0F);
	font-size: 1rem;
}

dialog button {
	margin: 0 0.5rem;
	text-align: right;
}

dialog::backdrop {
	background-color: color-mix(in srgb, var(--bg) 67%, transparent);
	backdrop-filter: blur(4px);
}

details {
	&::details-content {
		overflow: hidden;
		block-size: 0;
		transition: block-size var(--shorter), content-visibility var(--shorter);
		transition-behavior: allow-discrete;
	}
	&[open] {
		&::details-content {
			block-size: auto;
		}
	}
	& > summary {
		&::marker {
			color: var(--accent);
		}
	}
	&:has(.gallery):not([open]) {
		> summary::marker {
			animation: blink var(--longer) ease-in-out infinite;
		}
	}
}

h1, h2, h3, h4, h5, h6 {
	margin-bottom: calc(var(--xs) * 2vh); /*8px*/
	font-family: 'Josefin Sans', sans-serif; /*font-family: 'Bree Serif', serif;*/
	color: var(--accent);
}

h1 {
	font-size: 2.5rem;
}

hgroup {
	display: block;
	padding: 2px 0;
	line-height: 1;
	text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.33);

	& a:focus-visible {
		outline-width: 1px;
		outline-offset: -1px;
		outline-style: dashed;
	}
}

hr {
	height: 2px;
	margin: 0.5em 0;
	border: 1px solid var(--veiled);
	background-color: var(--veiled);
}

li {
	list-style-type: "• "; /* "● ", "◦ ", "•\002009" */
	/*list-style-position: inside;*/

	&::marker {
		color: var(--accent);
	}
}

p {
	margin-bottom: calc(var(--xs) * 2vh); /*8px*/
	font-size: 1rem;
	line-height: 1.5;
}

select {
	/*
	appearance: base-select;

	&::picker(select) {
	appearance: base-select;
	}
	*/
}

table {
	width: 100%;
	margin-bottom: 8px;
	/*border-collapse: collapse;*/
	border-spacing: 0;
	border-radius: var(--round);
	border: 1px solid var(--gray-A5);
	overflow: hidden;

	& tr:nth-child(odd), th td {
		background-color: rgba(128, 128, 128, 0.1);
	}
	& tr:last-child td {
		border-bottom: none;
	}
	& tfoot td {
		border-top: 1px solid var(--gray-A5);
	}
}
/* ... */

